fix:corrigindo alguns erros

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,7 +20,7 @@
 </head>
 <body>
     <header>
-        <h1>Dev.Jean</h1>
+        <h1>Jean</h1>
         <nav>
             <a href="https://github.com/jeanfs6" target="_blank">
                 <i class="fa-brands fa-github"></i>
@@ -39,7 +39,7 @@
                     recém formado no curso de Desenvolvimento Web pela Trybe. 
                     Tive a oportunidade de trabalhar na área de educação e administrativa.
                     Me sinto pronto para dar os meus próximos passos na minha carreira de
-                    desenvoledor.
+                    desenvolvedor.
                     
                 </p>
             </article>
